      - depends-on-packaging-dev
      - dh_installmanpages-is-obsolete
      - missing-field-in-dep5-copyright
      - missing-license-paragraph-in-dep5-copyright
      - missing-license-text-in-dep5-copyright
      - no-debian-copyright
      - obsolete-field-in-dep5-copyright
      - out-of-date-copyright-format-uri
      - package-contains-no-arch-dependent-files
      - readme-debian-contains-invalid-email-address
      - syntax-error-in-dep5-copyright
      - unknown-copyright-format-uri
      - unknown-paragraph-in-dep5-copyright
      - unused-license-paragraph-in-dep5-copyright
      - unversioned-copyright-format-uri
      - vim-addon-within-vim-runtime-path
      - wiki-copyright-format-uri
    + Removed:
      - debian-changelog-file-contains-debmake-default-email-address
      - readme-debian-contains-debmake-default-email-address
      - script-calls-init-script-directly

  * checks/*:
    + [NT] Dropped fields from Needs-Info, it is no longer needed.
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.  (Closes: #637595)
    + [JW] Removed all whitespace lines to avoid confusing some
      dctrl parsers (notably grep-dctrl).  (Closes: #639928)
    + [JW] Fix a number of broken references in the tag
      descriptions.  (Closes: #639923)
  * checks/binaries.desc:
    + [NT] Remove the reference to the Library Packaging Guide,
      since it is no longer available (in Debian).  (Closes: #640228)
  * checks/changelog-file{,.desc}:
    + [JW] Remove debmake-specific tag in favour of more general
      debian-changelog-file-contains-invalid-email-address.
      (Closes: #639946)
    + [JW,NT] Fixed use of uninitialized value as hash key.
      (Closes: #640238)
  * checks/{conffile,etcfiles}{,.desc}:
    + [JW] Merged etcfiles into conffile.  (Closes: #637590)
  * checks/copyright-file{,.desc}:
    + [JW] Check for CRLF line endings in copyright files.
      (Closes: #634191)
  * checks/debhelper: