@@ -1295,3 +1295,12 @@ Info: Vim addons should not be installed directly under a directory contained
  in the Vim runtime path.  Users shall be given the freedom to choose which
  addons they want to have enabled and which they don't.
 Ref: vim-policy 3.1
+
+Tag: perl-module-uses-perl4-libs-without-dep
+Severity: normal
+Certainty: possible
+Info: This package includes perl modules using obsoleted perl 4-era
+ libraries. These libraries have been deprecated in perl in 5.14, and
+ are likely to be removed from the core in perl 5.16. Please either
+ remove references to these libraries, or add a dependency on
+ <tt>libperl4-corelibs-perl | perl (&lt;&lt; 5.12.3-7)</tt> to this package.
