@@ -338,6 +338,8 @@ for my $field (qw/suggests recommends depends pre-depends provides/) {
 $all_deps .= ', ' if $all_deps;
 $all_deps .= $pkg;
 my $all_parsed = Lintian::Relation->new($all_deps);
+my $str_deps = $info->relation('strong');
+
 
 for my $filename (sort keys %{$info->scripts}) {
     my $interpreter = $info->scripts->{$filename}->{interpreter};
@@ -447,6 +449,17 @@ for my $filename (sort keys %{$info->scripts}) {
 	script_tag('script-uses-bin-env', $filename);
     } else {
 	script_tag('unusual-interpreter', $filename, "#!$interpreter");
+    }
+
+    # Check for obsolete perl libraries
+    if ($base eq 'perl' && !$str_deps->implies('libperl4-corelibs-perl')) {
+        open(FH, '<', $path) or fail("could not open script $path");
+        while (<FH>) {
+            if (/(?:do|require)\s+(?:'|")(abbrev|assert|bigfloat|bigint|bigrat|cacheout|complete|ctime|dotsh|exceptions|fastcwd|find|finddepth|flush|getcwd|getopt|getopts|hostname|importenv|look|newgetopt|open2|open3|pwd|shellwords|stat|syslog|tainted|termcap|timelocal|validate)\.pl(?:'|")/) {
+                tag 'script-uses-perl4-libs-without-dep', "$filename:$. ${1}.pl";
+            }
+        }
+        close(FH);
     }
 
     # If we found the interpreter and the script is executable, check
