@@ -1,5 +1,5 @@
-Last generated 2011-09-04
-Coverage: 719/934 (76.98%), w. legacy tests: 841/934 (90.04%)
+Last generated 2011-09-07
+Coverage: 720/935 (77.01%), w. legacy tests: 842/935 (90.05%)
 
 The following tags are not tested by the test suite:
 
