@@ -1,0 +1,1 @@
+Naughty.pm usr/share/perl5
