@@ -1,0 +1,1 @@
+W: files-uses-perl4-libs-without-dep: perl-module-uses-perl4-libs-without-dep usr/share/perl5/Naughty.pm:5 assert.pl
