@@ -1,0 +1,1 @@
+naughty-script usr/bin
