@@ -1,0 +1,5 @@
+Testname: scripts-uses-perl4-libs-with-dep
+Sequence: 6000
+Version: 1.0
+Description: Check that script-uses-perl4-libs-without-dep works (negative)
+Test-Against: script-uses-perl4-libs-without-dep
