@@ -1,0 +1,1 @@
+naughty-script.1
