@@ -1,0 +1,5 @@
+Testname: scripts-uses-perl4-libs-without-dep
+Sequence: 6000
+Version: 1.0
+Description: Check that script-uses-perl4-libs-without-dep works (positive)
+Test-For: script-uses-perl4-libs-without-dep
